# ASM-en-ADEAD-NASM

./: .gitignore  ABI-ADEAD-OFICIAL.md  ANALISIS-ALTERNATIVAS-ARQUITECTURA.md  ANALISIS-CAMBIOS-OPTIMIZER.md  ANALISIS-COMPLETO-PROYECTO.md  ANALISIS-ESTADO-ACTUAL-TESTS.md  ANALISIS-STACK-5-LENGUAJES.md  ANALISIS-STACK-COMPLETO-FUNCIONAL.md  ANTES-DESPUES-FUSION.md  ARQUITECTURA-INTELIGENTE.md  ASM-DEFINITIVO-VIRGEN-LIMPIO.md  AUTHORS.md  BUG-CORREGIDO-CONCATENACION.md  CHANGELOG.md  CHECKLIST-CORRECCIONES-ABI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECCIONES-WHILE-LOOP.md  Cargo.toml  DEAD-CODE-ELIMINATION-COMPLETADO.md  ERROR-CONVENTION.md  ESTADO-ARRAYS-NASM.md  ESTADO-CORRECCIONES-ABI.md  ESTADO-FINAL-LENGUAJE-COMPLETO.md  ESTADO-FINAL-MEJORAS.md  ESTADO-FUNCIONES-COMPLETAS.md  Fácil_Comando.md  GUIA-ADEAD.md  GUIA-OPTIMIZACION-TAMANO.md  HISTORIAL-ZIG-CPP.md  IMPLEMENTACION-NASM-UNIVERSAL.md  INDICE-FUSION.md  INVESTIGACION-STACK-COMPLETO.md  Ideas-Ejecución.md  LICENSE  LIMPIEZA-COMPLETA-ZIG-D.md  MEJORAS-IMPLEMENTADAS.md  MEJORAS-INCREMENTALES.md  MEJORAS-PIPELINE-COMPLETADAS.md  METAS-PYTHON-STYLE-TOTAL.md  (+54 more)
.cargo/: config.toml
CLEAN_CODE/: COMO_EJECUTAR.md  Cargo.toml  EXTREMO.md  INTEGRACION.md  QUICKSTART.md  README.md  RESUMEN.md
CLEAN_CODE/examples/: ESTRUCTURA.md  README.md  RELACION_ARCHIVOS.md  RESULTADOS.md  clean_real_example.rs  comparar.ps1  ver_relacion.ps1
CLEAN_CODE/examples/CODIGO/: test_array_completo.c  test_array_original.c
CLEAN_CODE/examples/EXE/: README.md
CLEAN_CODE/examples/docs/: COMPARACION.md  RESULTADOS_COMPARACION.md  RESULTADOS_COMPILACION.md  RESULTADOS_FINALES.md  SOLUCION_INDEPENDIENTE.md  ideas-ASM.md
CLEAN_CODE/examples/scripts/: COMPARACION_COMPLETA_YA.ps1  VER_RESULTADOS.ps1  comparar_directo.ps1  compilar_completo.ps1  compilar_con_gas.ps1  compilar_todos_a_exe.ps1  compilar_y_comparar.ps1  compilar_y_comparar_final.ps1  compilar_y_ejecutar_YA.ps1  crear_ejecutables.ps1  ejecutar_YA.ps1  example_usage.rs  main_simple.c  main_test.c  test_array_wrapper.c
CLEAN_CODE/src/: cleaner.rs  constant_propagation.rs  data_flow.rs  dead_code.rs  lib.rs  objconv_integration.rs  peephole.rs  strength_reduction.rs
CORE/: README.md
CORE/rust/crates/adead-cli/: Cargo.toml
CORE/rust/crates/adead-cli/src/: c_compiler.rs  linker.rs  main.rs
CORE/rust/crates/adead-parser/: Cargo.toml  PIPELINE_OPTIMIZADO.md  build.rs  chkstk_stub.c
CORE/rust/crates/adead-parser/src/: IMPLEMENTACION_ASM_VIRGEN.md  c_generator.rs  c_manual_parser.rs  c_to_nasm.rs  c_while_if_parser.rs  clean_asm.rs  cpp_generator.rs  cpp_optimizer.rs  d_ctfe.rs  d_ffi.rs  d_zig_asm.rs  lib.rs  optimized_pipeline.rs  parallel_pipeline.rs  parser_at_1_1_debug.rs  parser_debug.rs  pipeline_selector.rs  tree_sitter_nasm.rs  tree_sitter_parser.rs  zig_expr_parser.rs  zig_nasm_generator.rs  zig_struct_parser.rs
CORE/rust/crates/adead-parser/tests/: raii_init_destroy.rs  test_encapsulation_integration.rs  test_imports.rs  test_pipeline_completo.rs  test_print_expr.rs
Documentos en AVANCES DE PROCESOS/: OBJETIVO-OPTIMIZACION-FINAL.md  OPTIMIZACION-LINKER-GROK.md  PLAN-ACCION-INMEDIATO-OPTIMIZACION.md  RESUMEN-DEAD-CODE-COMPLETADO.md  RESUMEN-DEAD-CODE-IMPLEMENTACION.md  RESUMEN-OPTIMIZACION-LINKER.md  RESUMEN-OPTIMIZACIONES-APLICADAS.md  SOLUCION-PATH.md  SOLUCIONES-OPTIMIZACION-GROK.md
Ejemplos-Reales/: README.md
Faltantes/: 06_class_rectangulo.ad  10_class_banco.ad  README.md  test_parse.ad  test_parse3.ad  test_simple_struct.ad  test_two_structs.ad
New Test 1/: ESTADO-VERIFICACION.md  RESUMEN-VERIFICACION.md  VERIFICACION-FUNCIONES.md  ejecutar_tests.ps1  test_funcion_completa.ad  test_funcion_multi_param.ad  test_funcion_recursiva.ad  test_funcion_return_multiple.ad  test_funcion_simple.ad
Pruebas/: PROGRESO-IMPLEMENTACION.md  RESUMEN-IMPLEMENTACION.md  ejecutar_tests.ps1  test_array_completo.ad  test_array_count.ad  test_array_index.ad  test_array_insert.ad  test_array_remove.ad  test_array_sort.ad
Pruebas Avanzadas/: CORRECCIONES-APLICADAS.md  RESUMEN-STRINGS-AVANZADOS.md  ejecutar_tests_strings.ps1  test_string_completo.ad  test_string_concat.ad  test_string_len.ad  test_string_lower.ad  test_string_slice.ad  test_string_upper.ad
Pruebas Zig Linker/: README.md  RESULTADOS-TEST-OPTIMIZACIONES.md  RESUMEN-FINAL.md  RESUMEN-IMPLEMENTACION.md  SOLUCION-DUPLICADO.md  SOLUCION-ERROR.md  SOLUCION-RUTAS-POWERSHELL.md  SOLUCION-RUTAS-ZIG.md  SOLUCION-ZIG-FEMIT-BIN.md  SOLUCION-ZIG-O.md  TEST-OPTIMIZACIONES.md  USAR-UPX.txt  VERIFICAR-UPX.md  build_tiny.bat  build_tiny_gcc.ps1  build_tiny_zig.ps1  diagnostico.ps1  ejecutar_test.ps1  test_build.ps1  test_simple.ad
TEST_ARITMETICA/: RESUMEN-OPERADORES-IMPLEMENTADOS.md  test_operadores_nuevos.ad
TEST_OOP/: 01_struct_simple.ad  02_struct_multi_campos.ad  02_struct_multiple.ad  02_struct_nasm.ad  03_struct_acceso_campos.ad  03_struct_methods.ad  03_struct_operaciones.ad  04_class_basica.ad  04_struct_literal.ad  05_class_metodos.ad  05_struct_multiple_instancias.ad  06_class_new_simple.ad  07_class_new_params.ad  07_class_pila.ad  08_class_persona.ad  08_class_self.ad  09_class_metodo_simple.ad  09_class_vector2d.ad  10_class_metodo_params.ad  11_class_metodo_return.ad  12_raii_init_destroy.ad  ANALISIS-COMPLETO-PARSER.md  ANALISIS-DEBUG-ACTUAL.md  ANALISIS-PARSER-BACKEND.md  ESTADO-ACTUAL-OOP.md  ESTADO-TESTS-OOP.md  GUIA-OOP-COMPLETA.md  INVESTIGACION-BUG.md  INVESTIGACION-RAIZ-COMPLETA.md  MEJORAS-APLICADAS.md  Nuevas-Ideas.md  PROBLEMA-RAIZ-IDENTIFICADO.md  (+41 more)
rust/crates/adead-borrow/: Cargo.toml
rust/crates/adead-borrow/src/: lib.rs
rust/crates/adead-borrow/tests/: encapsulation_visibility.rs
rust/crates/adead-parser/: Cargo.toml  build.rs
rust/crates/adead-parser/src/: lib.rs  lib.rs.restored  module_resolver.rs  parser_brackets_simple.rs  parser_rust_zig_style.rs  tree_sitter_nasm.rs  tree_sitter_parser.rs  zig_expr_parser.rs  zig_ffi_parser.rs  zig_nasm_generator.rs  zig_struct_parser.rs
rust/crates/adead-parser/tests/: encapsulation_visibility.rs  raii_init_destroy.rs  test_corchetes_simple.rs
(+324 files in other folders)
