[workspace]
# ⚠️ NOTA: El código Rust está ahora en rust/crates/
# Este archivo se mantiene en la raíz para compatibilidad
# El workspace real está en rust/Cargo.toml
members = [
    "rust/crates/adead-cli",
    "rust/crates/adead-common",
    "rust/crates/adead-parser",
    "rust/crates/adead-backend",
    "rust/crates/adead-borrow",
]
resolver = "2"

[workspace.package]
version = "1.5.5"
edition = "2021"
authors = ["Eddi Andreé Salazar Matos <eddi.andre.salazar.matos@gmail.com>"]
license = "MIT"
description = "ADead: Python-like language that compiles to NASM (x86_64 Linux)"
repository = "https://github.com/eddiandre/adead"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
chumsky = "0.9"
logos = "0.14"
pretty_assertions = "1.4"

