[workspace]
# ⚠️ NOTA: El código Rust está ahora en CORE/rust/crates/
# Este archivo se mantiene en la raíz para compatibilidad
# El workspace real está en CORE/rust/Cargo.toml
members = [
    "CORE/rust/crates/adead-cli",
    "CORE/rust/crates/adead-common",
    "CORE/rust/crates/adead-parser",
    "CORE/rust/crates/adead-backend",
    "CORE/rust/crates/adead-borrow",
]
resolver = "2"

[workspace.package]
version = "1.9.5"
edition = "2021"
authors = ["Eddi Andreé Salazar Matos <eddi.andre.salazar.matos@gmail.com>"]
license = "MIT"
description = "ADead: Python-like language that compiles to NASM (x86_64 Linux)"
repository = "https://github.com/eddiandre/adead"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
chumsky = "0.9"
logos = "0.14"
pretty_assertions = "1.4"

# ═══════════════════════════════════════════════════════════════
# OPTIMIZACIONES DE BUILD
# ═══════════════════════════════════════════════════════════════

# Perfil de desarrollo: builds rápidos para iteración
[profile.dev]
opt-level = 0          # Sin optimización para compilación rápida
debug = true           # Símbolos de debug
incremental = true     # Compilación incremental
codegen-units = 256    # Más unidades = compilación paralela más rápida

# Perfil de release: máxima optimización
[profile.release]
opt-level = 3          # Máxima optimización
lto = "thin"           # Link-Time Optimization ligero (balance velocidad/tamaño)
codegen-units = 1      # Una unidad para mejor optimización
panic = "abort"        # Abort en panic (binario más pequeño)
strip = true           # Eliminar símbolos de debug

# Perfil para desarrollo rápido con algo de optimización
[profile.dev.package."*"]
opt-level = 2          # Optimizar dependencias en dev

