[package]
name = "clean-code"
version = "0.1.0"
edition = "2021"
authors = ["Eddi Andreé Salazar Matos"]
description = "Post-procesador optimizador de ASM para ADead - Transforma ASM sucio en ASM virgen puro"
license = "MIT"

[workspace]

[dependencies]
regex = "1.10"
itertools = "0.12"
petgraph = "0.6"

[dev-dependencies]

[lib]
name = "clean_code"
path = "src/lib.rs"

[[example]]
name = "clean_real_example"
path = "examples/clean_real_example.rs"

