[package]
name = "adead-borrow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
adead-common = { path = "../adead-common" }
adead-parser = { path = "../adead-parser" }
thiserror.workspace = true
