[package]
name = "adead-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "adeadc"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
adead-parser = { path = "../adead-parser" }
adead-backend = { path = "../adead-backend" }
adead-common = { path = "../adead-common" }
anyhow = { workspace = true }

